feat: add formal JSON schema for emulated tool calls