@@ -17,13 +17,15 @@ import dev.langchain4j.model.chat.request.ResponseFormatType;
 import dev.langchain4j.model.chat.request.ToolChoice;
 import dev.langchain4j.model.chat.request.json.JsonArraySchema;
 import dev.langchain4j.model.chat.request.json.JsonBooleanSchema;
+import dev.langchain4j.model.chat.request.json.JsonEnumSchema;
 import dev.langchain4j.model.chat.request.json.JsonIntegerSchema;
 import dev.langchain4j.model.chat.request.json.JsonNumberSchema;
+import dev.langchain4j.model.chat.request.json.JsonObjectSchema;
+import dev.langchain4j.model.chat.request.json.JsonSchema;
 import dev.langchain4j.model.chat.request.json.JsonStringSchema;
 import dev.langchain4j.model.chat.response.ChatResponse;
 import dev.langchain4j.model.chat.response.StreamingChatResponseHandler;
 import dev.langchain4j.model.openai.OpenAiChatRequestParameters;
-import io.github.jbellis.brokk.analyzer.CodeUnit;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -43,6 +45,10 @@ import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
+/**
+ * The main orchestrator for sending requests to an LLM, possibly with tools, collecting
+ * streaming responses, etc.
+ */
 public class Coder {
     private static final Logger logger = LogManager.getLogger(Coder.class);
 
@@ -59,21 +65,20 @@ public class Coder {
     }
 
     /**
-     * Sends a user query to the LLM (with streaming),
-     * writes to conversation history, etc.
+     * Sends a user query to the LLM with streaming. Tools are not used.
+     * Writes to conversation history. Optionally echoes partial tokens to the console.
      *
-     * @param model    The LLM model to use
+     * @param model The LLM model to use
      * @param messages The messages to send
-     * @param echo     Whether to echo LLM responses to the console
-     * @return The final response from the LLM as a string
+     * @param echo Whether to echo LLM responses to the console as they stream
+     * @return The final response from the LLM as a record containing ChatResponse, errors, etc.
      */
     public StreamingResult sendStreaming(StreamingChatLanguageModel model, List<ChatMessage> messages, boolean echo) {
         return sendMessageWithRetry(model, messages, List.of(), ToolChoice.AUTO, echo, MAX_ATTEMPTS);
     }
 
     /**
-     * Transcribes an audio file using the configured STT model (OpenAI Whisper if available).
-     * Returns the transcribed text or an error message on failure.
+     * Transcribes an audio file using an STT model. Returns text or empty if error.
      */
     public String transcribeAudio(Path audioFile, Set<String> symbols) {
         var sttModel = Models.sttModel();
@@ -86,33 +91,40 @@ public class Coder {
         }
     }
 
+    /**
+     * Actually performs one streaming call to the LLM, returning once the response
+     * is done or there's an error. If 'echo' is true, partial tokens go to console.
+     */
     private StreamingResult doSingleStreamingCall(StreamingChatLanguageModel model,
                                                   ChatRequest request,
                                                   boolean echo)
     {
         // latch for awaiting the complete response
         var latch = new CountDownLatch(1);
-        // locking for cancellation -- we don't want to show any output after cancellation
-        AtomicBoolean canceled = new AtomicBoolean(false);
+        var canceled = new AtomicBoolean(false);
         var lock = new ReentrantLock();
-        AtomicReference<Throwable> errorRef = new AtomicReference<>(null);
-        AtomicReference<Integer> outputTokenCountRef = new AtomicReference<>(-1);
-        Consumer<Runnable> ifNotCancelled = (r -> {
+        var errorRef = new AtomicReference<Throwable>(null);
+        var outputTokenCountRef = new AtomicReference<>(-1);
+        var atomicResponse = new AtomicReference<ChatResponse>();
+
+        Consumer<Runnable> ifNotCancelled = (r) -> {
             lock.lock();
             try {
-                if (canceled.get()) return;
-                r.run();
+                if (!canceled.get()) {
+                    r.run();
+                }
             } finally {
                 lock.unlock();
             }
-        });
+        };
 
-        // Write request with tools to history
+        // Write request details to history
         var tools = request.parameters().toolSpecifications();
         writeRequestToHistory(request.messages(), tools);
 
-        AtomicReference<ChatResponse> atomicResponse = new AtomicReference<>();
-
+        if (Thread.currentThread().isInterrupted()) {
+            return new StreamingResult(null, true, null);
+        }
         model.chat(request, new StreamingChatResponseHandler() {
             @Override
             public void onPartialResponse(String token) {
@@ -139,7 +151,6 @@ public class Coder {
                         // Fake an exception so the caller can treat it like other errors
                         errorRef.set(new HttpException(400, "BadRequestError"));
                     } else {
-                        writeToHistory("Response", response.toString());
                         if (response.tokenUsage() == null) {
                             logger.warn("Null token usage !? in {}", response);
                         } else {
@@ -153,7 +164,6 @@ public class Coder {
             @Override
             public void onError(Throwable error) {
                 ifNotCancelled.accept(() -> {
-                    writeToHistory("Error", error.getClass() + ": " + error.getMessage());
                     io.toolErrorRaw("LLM error: " + error.getMessage());
                     // Instead of interrupting, just record it so we can retry from the caller
                     errorRef.set(error);
@@ -171,51 +181,42 @@ public class Coder {
             // We were interrupted while waiting
             return new StreamingResult(null, true, null);
         }
-        if (Thread.currentThread().isInterrupted()) {
-            // Another chance to detect cancellation
-            return new StreamingResult(null, true, null);
-        }
 
-        Throwable streamingError = errorRef.get();
-        int outputTokenCount = outputTokenCountRef.get();
+        var streamingError = errorRef.get();
+        var outputTokenCount = outputTokenCountRef.get();
         if (streamingError != null) {
             // Return an error result
             return new StreamingResult(null, outputTokenCount, false, streamingError);
         }
 
-        // No error, not cancelled => success
-        return new StreamingResult(atomicResponse.get(), outputTokenCount, false, null);
+        var cr = atomicResponse.get();
+        if (cr == null) {
+            // also an error
+            return new StreamingResult(null, outputTokenCount, false, new IllegalStateException("No ChatResponse from model"));
+        }
+        return new StreamingResult(cr, outputTokenCount, false, null);
     }
 
     /**
-     * Send a message to the default quick model without tools.
-     *
-     * @param messages The messages to send
-     * @return The LLM response text, trimmed. Returns an empty string on error/cancellation.
+     * Convenience method to send messages to the "quick" model without tools or streaming echo.
      */
     public String sendMessage(List<ChatMessage> messages) {
         var result = sendMessage(Models.quickModel(), messages, List.of(), ToolChoice.AUTO, false);
-        if (result.cancelled() || result.error() != null || result.chatResponse() == null || result.chatResponse().aiMessage() == null) {
-            throw new IllegalStateException();
+        if (result.cancelled() || result.error() != null || result.chatResponse() == null) {
+            throw new IllegalStateException("LLM returned null or error: " + result.error());
         }
         return result.chatResponse().aiMessage().text().trim();
     }
 
     /**
-     * Send a message to a specific model without tools.
+     * Sends messages to a given model, no tools, no streaming echo.
      */
     public StreamingResult sendMessage(StreamingChatLanguageModel model, List<ChatMessage> messages) {
         return sendMessage(model, messages, List.of(), ToolChoice.AUTO, false);
     }
 
-
     /**
-     * Send a message to a specific model with tool support
-     *
-     * @param model    The model to use
-     * @param messages The messages to send
-     * @param tools    List of tools to enable for the LLM
-     * @return The LLM response as a string
+     * Sends messages to a model with possible tools and a chosen tool usage policy.
      */
     public StreamingResult sendMessage(StreamingChatLanguageModel model,
                                        List<ChatMessage> messages,
@@ -225,20 +226,21 @@ public class Coder {
     {
         var result = sendMessageWithRetry(model, messages, tools, toolChoice, echo, MAX_ATTEMPTS);
         var cr = result.chatResponse();
+
         // poor man's ToolChoice.REQUIRED (not supported by langchain4j for Anthropic)
-        // Also needed for our DeepSeek emulation if it returns a response without a tool call
-        while (!result.cancelled && result.error == null && !tools.isEmpty() && !cr.aiMessage().hasToolExecutionRequests() && toolChoice == ToolChoice.REQUIRED) {
+        // Also needed for our emulation if it returns a response without a tool call
+        while (!result.cancelled
+                && result.error == null
+                && !tools.isEmpty()
+                && !cr.aiMessage().hasToolExecutionRequests()
+                && toolChoice == ToolChoice.REQUIRED)
+        {
             logger.debug("Enforcing tool selection");
             io.systemOutput("Enforcing tool selection");
+
             var extraMessages = new ArrayList<>(messages);
             extraMessages.add(cr.aiMessage());
-
-            // Add a stronger instruction for DeepSeek models
-            if (model.toString().toLowerCase().contains("deepseek")) {
-                extraMessages.add(new UserMessage("You MUST call one of the available tools. Format your response as JSON with a tool_calls array."));
-            } else {
-                extraMessages.add(new UserMessage("At least one tool execution request is required"));
-            }
+            extraMessages.add(new UserMessage("At least one tool execution request is REQUIRED. Please call a tool."));
 
             result = sendMessageWithRetry(model, extraMessages, tools, toolChoice, echo, MAX_ATTEMPTS);
             cr = result.chatResponse();
@@ -248,7 +250,8 @@ public class Coder {
     }
 
     /**
-     * Wrapper for chat calls with retry logic and exponential backoff
+     * Retries a request up to maxAttempts times on connectivity or empty-result errors,
+     * using exponential backoff. Responsible for writeToHistory.
      */
     private StreamingResult sendMessageWithRetry(StreamingChatLanguageModel model,
                                                  List<ChatMessage> messages,
@@ -257,54 +260,53 @@ public class Coder {
                                                  boolean echo,
                                                  int maxAttempts)
     {
-        Throwable error = null;
+        Throwable lastError = null;
         int attempt = 0;
+
         while (attempt++ < maxAttempts) {
-            logger.debug("Sending request to {} attempt {} [only last message shown]: {}", Models.nameOf(model), attempt, messages.getLast());
+            logger.debug("Sending request to {} attempt {} [only last message shown]: {}",
+                         Models.nameOf(model), attempt, messages.getLast());
+
             var response = doSingleSendMessage(model, messages, tools, toolChoice, echo);
             if (response.cancelled) {
                 writeToHistory("Cancelled", "LLM request cancelled by user");
                 return response;
             }
-
-            error = response.error;
-            if (error == null) {
+            if (response.error == null) {
+                // Check if we got a non-empty response
                 var cr = response.chatResponse;
                 boolean isEmpty = (cr.aiMessage().text() == null || cr.aiMessage().text().isBlank())
                         && !cr.aiMessage().hasToolExecutionRequests();
                 if (!isEmpty) {
+                    // success!
                     writeToHistory("Response", cr.aiMessage().text());
                     return response;
                 }
             }
-            if (error != null && error.getMessage().contains("BadRequestError")) {
+            // some error or empty response
+            lastError = response.error;
+            if (lastError != null && lastError.getMessage().contains("BadRequestError")) {
                 // don't retry on bad request errors
                 break;
             }
 
-            // wait between retries
-            logger.debug("LLM error / empty message in {}", response);
+            logger.debug("LLM error / empty message. Will retry. Attempt={}", attempt);
             if (attempt == maxAttempts) {
-                // don't sleep if this is the last attempt
-                break;
+                break; // done
             }
-
-            // Exponential backoff
+            // wait between attempts
             long backoffSeconds = 1L << (attempt - 1);
-            backoffSeconds = Math.min(backoffSeconds, 16);
-
-            io.systemOutput(String.format("LLM issue on attempt %d of %d (will retry in %.1f seconds).",
-                                          attempt, maxAttempts, (double) backoffSeconds));
+            backoffSeconds = Math.min(backoffSeconds, 16L);
 
             // Busywait with countdown
-            long startTime = System.currentTimeMillis();
-            long endTime = startTime + (backoffSeconds * 1000L);
+            io.systemOutput(String.format("LLM issue on attempt %d/%d (retrying in %d seconds).", attempt, maxAttempts, backoffSeconds));
             try {
+                long endTime = System.currentTimeMillis() + backoffSeconds * 1000;
                 while (System.currentTimeMillis() < endTime) {
-                    double remainingSeconds = (endTime - System.currentTimeMillis()) / 1000.0;
-                    if (remainingSeconds <= 0) break;
-                    io.actionOutput(String.format("Retrying in %.1f seconds...", remainingSeconds));
-                    Thread.sleep(100); // Update every 100ms
+                    long remain = endTime - System.currentTimeMillis();
+                    if (remain <= 0) break;
+                    io.actionOutput("Retrying in %.1f seconds...".formatted(remain / 1000.0));
+                    Thread.sleep(Math.min(remain, 100));
                 }
             } catch (InterruptedException e) {
                 io.systemOutput("Interrupted!");
@@ -312,173 +314,177 @@ public class Coder {
             }
         }
 
-        // Return the final result
-        if (error == null) {
-            // Return a minimal ChatResponse indicating empty
-            writeToHistory("Error", "LLM returned empty or null after max retries");
-            var cr = ChatResponse.builder().aiMessage(new AiMessage("Empty response after max retries")).build();
-            return new StreamingResult(cr, false, new IllegalStateException("LLM returned empty or null"));
+        // If we get here, we failed all attempts
+        if (lastError == null) {
+            // LLM returned empty or null
+            writeToHistory("Error", "LLM returned empty response after max retries");
+            var dummy = ChatResponse.builder().aiMessage(new AiMessage("Empty response after max retries")).build();
+            return new StreamingResult(dummy, false, new IllegalStateException("LLM empty or null after max retries"));
         }
-        writeToHistory("Error", error.getClass() + ": " + error.getMessage());
-        // Return a minimal ChatResponse with an error text so caller knows
-        var cr = ChatResponse.builder().aiMessage(new AiMessage("Error: " + error.getMessage())).build();
-        return new StreamingResult(cr, false, error);
+        // Return last error
+        writeToHistory("Error", lastError.getClass() + ": " + lastError.getMessage());
+        var cr = ChatResponse.builder().aiMessage(new AiMessage("Error: " + lastError.getMessage())).build();
+        return new StreamingResult(cr, false, lastError);
     }
 
     /**
-     * Performs a single message call without retries
+     * Sends messages to model in a single attempt. If the model doesn't natively support
+     * function calling for these tools, we emulate it using a JSON Schema approach.
      */
-    private StreamingResult doSingleSendMessage(StreamingChatLanguageModel model, List<ChatMessage> messages, List<ToolSpecification> tools, ToolChoice toolChoice, boolean echo) {
+    private StreamingResult doSingleSendMessage(StreamingChatLanguageModel model,
+                                                List<ChatMessage> messages,
+                                                List<ToolSpecification> tools,
+                                                ToolChoice toolChoice,
+                                                boolean echo)
+    {
         writeRequestToHistory(messages, tools);
+
+        if (!tools.isEmpty() && LLMTools.requiresEmulatedTools(model)) {
+            return emulateToolsUsingStructuredSchema(model, messages, tools, toolChoice, echo);
+        }
+
+        // If no tools, or model can do native function calling, do normal.
         var builder = ChatRequest.builder().messages(messages);
-
         if (!tools.isEmpty()) {
-            // Check if this is a DeepSeek model that needs function calling emulation
-            if (LLMTools.requiresEmulatedTools(model)) {
-                return emulateToolsUsingStructuredOutput(model, messages, tools, toolChoice, echo);
-            }
-
-            // For models with native function calling
             logger.debug("Performing native tool calls");
             var params = OpenAiChatRequestParameters.builder()
                     .toolSpecifications(tools)
                     .parallelToolCalls(true)
                     .toolChoice(toolChoice)
                     .build();
-            builder = builder.parameters(params);
+            builder.parameters(params);
         }
 
         var request = builder.build();
-        var response = doSingleStreamingCall(model, request, echo);
-        writeToHistory("Response", response.toString());
-        return response;
+        return doSingleStreamingCall(model, request, echo);
     }
 
     /**
      * Emulates function calling for models that support structured output but not native function calling
-     * Used primarily for DeepSeek models
+     * {
+     *   "tool_calls": [
+     *     {
+     *       "name": "my_tool",
+     *       "arguments": { ...free or partial schema... }
+     *     },
+     *     ...
+     *   ]
+     * }
+     *
+     * Then we parse the resulting JSON, turning it into tool execution requests.
      */
-    private StreamingResult emulateToolsUsingStructuredOutput(StreamingChatLanguageModel model, List<ChatMessage> messages, List<ToolSpecification> tools, ToolChoice toolChoice, boolean echo) {
+    private StreamingResult emulateToolsUsingStructuredSchema(StreamingChatLanguageModel model,
+                                                              List<ChatMessage> messages,
+                                                              List<ToolSpecification> tools,
+                                                              ToolChoice toolChoice,
+                                                              boolean echo)
+    {
         assert !tools.isEmpty();
-        for (var tool : tools) {
-            assert tool.parameters() != null;
-            assert tool.parameters().properties() != null;
-        }
 
-        var instructionsPresent = emulatedToolInstructionsPresent(messages);
-        logger.debug("Tool emulation sending {} messages with {}", messages.size(), instructionsPresent);
-        ObjectMapper mapper = new ObjectMapper();
-        if (!instructionsPresent) {
-            // Inject instructions for the model re how to format function calls
-            var instructions = getInstructions(tools);
-            var modified = new UserMessage(Models.getText(messages.getLast()) + "\n\n" + instructions);
-            messages = new ArrayList<>(messages); // so we can modify it
-            messages.set(messages.size() - 1, modified);
-            logger.debug("Modified messages are {}", messages);
-        }
-
-        // Create a request with JSON response format
+        // Build a top-level JSON schema with "tool_calls" as an array of objects
+        // each object has "name" as an enum of possible tool names, and "arguments"
+        // as a general object with no fixed properties (since "anyOf" etc. is not
+        // always supported by all LLM providers).
+        var toolNames = tools.stream().map(ToolSpecification::name).distinct().toList();
+        var schema = buildToolCallsSchema(toolNames);
+        var responseFormat = ResponseFormat.builder()
+                .type(ResponseFormatType.JSON)
+                .jsonSchema(schema)
+                .build();
         var requestParams = ChatRequestParameters.builder()
-                .responseFormat(ResponseFormat.builder()
-                                        .type(ResponseFormatType.JSON)
-                                        .build())
+                .responseFormat(responseFormat)
                 .build();
 
-        // Try up to 3 times to get a valid JSON response
-        int maxRetries = 3;
-        List<ChatMessage> currentMessages = new ArrayList<>(messages);
+        // We'll add a user reminder to produce a JSON that matches the schema
+        var attemptMessages = new ArrayList<>(messages);
+        var instructions = getInstructions(tools);
+        var modified = new UserMessage(Models.getText(messages.getLast()) + "\n\n" + instructions);
+        attemptMessages.set(attemptMessages.size() - 1, modified);
+        logger.debug("Modified messages are {}", attemptMessages);
 
-        for (int attempt = 1; attempt <= maxRetries; attempt++) {
+        // We'll do up to 3 tries
+        int maxTries = 3;
+        ObjectMapper mapper = new ObjectMapper();
+        ChatResponse lastResponse = null;
+        Throwable lastError = null;
+        int outputTokenCount = -1;
+
+        for (int attempt = 1; attempt <= maxTries; attempt++) {
             var request = ChatRequest.builder()
-                    .messages(currentMessages)
+                    .messages(attemptMessages)
                     .parameters(requestParams)
                     .build();
-            var result = doSingleStreamingCall(model, request, echo);
 
-            // If cancelled or no chat response, return immediately
-            if (result.cancelled) {
-                return result;
+            var singleCallResult = doSingleStreamingCall(model, request, echo);
+            if (singleCallResult.cancelled) {
+                return singleCallResult; // user interrupt
+            }
+            lastResponse = singleCallResult.chatResponse;
+            lastError = singleCallResult.error;
+            outputTokenCount = singleCallResult.outputTokenCount;
+
+            // If an error occurred (like connectivity or 400) let's bail early
+            if (lastError != null) {
+                break;
+            }
+            // If there's no AI message, we can't parse
+            if (lastResponse == null || lastResponse.aiMessage() == null) {
+                lastError = new IllegalArgumentException("No valid ChatResponse or AiMessage from model");
+                break;
             }
 
-            if (result.chatResponse == null || result.chatResponse.aiMessage() == null) {
-                logger.debug("No chat response or AI message in response on attempt {}", attempt);
-                continue;
-            }
-
-            // Try to parse the JSON response
+            // Now parse the JSON
             try {
-                StreamingResult parsedResponse = parseJsonToTools(result, mapper);
-                if (parsedResponse.chatResponse.aiMessage().hasToolExecutionRequests()) {
-                    // Successfully parsed tool calls, return the result
-                    logger.debug("Successfully parsed tool calls on attempt {}", attempt);
-                    return parsedResponse;
+                StreamingResult parseResult = parseJsonToToolRequests(singleCallResult, mapper);
+                // If we got tool calls, we are done
+                if (parseResult.chatResponse.aiMessage().hasToolExecutionRequests()) {
+                    return parseResult;
                 }
-                // If we get here, the response was valid JSON but didn't contain tool calls
+                // else if no tool calls, but toolChoice= AUTO => it's acceptable
                 if (toolChoice == ToolChoice.AUTO) {
-                    // If tools are optional, return the original response
-                    logger.debug("Tools are optional, returning original response on attempt {}", attempt);
-                    return result;
+                    return singleCallResult;
                 }
-                // else throw so catch retries
-                throw new IllegalArgumentException("Response contained valid JSON but no tool_calls");
+                // else we wanted at least 1 tool call
+                throw new IllegalArgumentException("No 'tool_calls' found in JSON");
             } catch (IllegalArgumentException e) {
-                // If this is the last attempt, throw the exception
-                if (attempt == maxRetries) {
-                    var msg = "Failed to get valid tool calls after %d attempts: %s".formatted(maxRetries, e.getMessage());
-                    logger.error(msg);
-                    return new StreamingResult(result.chatResponse, result.outputTokenCount, false, new RuntimeException(msg));
+                logger.debug("JSON parse failed on attempt {}: {}", attempt, e.getMessage());
+                if (attempt == maxTries) {
+                    // last try
+                    lastError = new RuntimeException("Failed to produce valid tool_calls after " + maxTries + " attempts", e);
+                    break;
                 }
-
-                // Add the invalid response to the messages
-                String invalidResponse = result.chatResponse.aiMessage().text();
-                logger.debug("Invalid JSON response on attempt {}: {}", attempt, e);
-                io.systemOutput("Retry " + attempt + "/" + maxRetries + ": Invalid JSON response, requesting proper format.");
-
-                // Add the invalid response as an assistant message
-                currentMessages.add(new AiMessage(invalidResponse));
-
-                // Add a clearer instruction for the next attempt
-                String additionalInstruction = "Include all the tool calls necessary to satisfy the request in a single array!";
-                if (result.outputTokenCount > 0) {
-                    int maxTokens = Models.getMaxOutputTokens(Models.nameOf(model));
-                    if (maxTokens > 0 && result.outputTokenCount >= maxTokens) {
-                        logger.debug("Max token limit hit: output={} >= max={}", result.outputTokenCount, maxTokens);
-                        additionalInstruction = "\n\nIMPORTANT: Your previous response reached the token limit.  Try solving a smaller piece of the problem this time.";
-                    }
-                }
-
-                String retryMessage = """
-                Your previous response was not valid: %s
-                You MUST respond ONLY with a valid JSON object containing a 'tool_calls' array. Do not include any other text or explanation.
-                %s
-                REMEMBER that you are to provide a JSON object containing a 'tool_calls' array, NOT top-level array.
-                Here is the format, where $foo indicates that you will make appropriate substitutions for the given tool call
-                {
-                  "tool_calls": [
-                    {
-                      "name": "$tool_name",
-                      "arguments": {
-                        "$arg1": "$value1",
-                        "$arg2": "$value2",
-                        ...
+                // Otherwise, add a hint and re-try
+                io.systemOutput("Retry " + attempt + "/" + (maxTries-1) + ": Invalid JSON response, requesting proper format.");
+                attemptMessages.add(new AiMessage(lastResponse.aiMessage().text()));
+                attemptMessages.add(new UserMessage("""
+                Your previous response was invalid or did not contain tool_calls. 
+                Please ensure you only return a JSON object matching the schema:
+                  {
+                    "tool_calls": [
+                      {
+                        "name": "...",
+                        "arguments": { ... }
                       }
-                    }
-                  ]
-                }
-                """.formatted(e.getMessage(), additionalInstruction).stripIndent();
-
-                currentMessages.add(new UserMessage(retryMessage));
-                writeToHistory("Retry Attempt " + attempt, "Invalid JSON: " + invalidResponse + "\n\nRetry with: " + retryMessage);
+                    ]
+                  }
+                """.stripIndent()));
             }
         }
 
-        // If we reach here, all retries failed
-        logger.error("All {} attempts to get valid JSON tool calls failed", maxRetries);
-        var msg = new AiMessage("Failed to generate valid tool calls after " + maxRetries + " attempts");
-        return new StreamingResult(ChatResponse.builder().aiMessage(msg).build(),
-                                   false,
-                                   new IllegalArgumentException("Failed to generate valid tool calls after " + maxRetries + " attempts")
-        );
+        // If we get here, we have an error or invalid final response
+        if (lastResponse == null) {
+            // No final response at all
+            var failMsg = "No valid response after " + maxTries + " attempts: " + (lastError != null ? lastError.getMessage() : "Unknown");
+            logger.error(failMsg);
+            var dummyResponse = ChatResponse.builder().aiMessage(new AiMessage(failMsg)).build();
+            return new StreamingResult(dummyResponse, outputTokenCount, false, new RuntimeException(failMsg));
+        }
+        // Otherwise we have some final ChatResponse with an error
+        var fail = ChatResponse.builder()
+                .aiMessage(new AiMessage("Error: " + lastError.getMessage()))
+                .build();
+        logger.error("Emulated function calling failed: {}", lastError.getMessage());
+        return new StreamingResult(fail, outputTokenCount, false, lastError);
     }
 
     private static boolean emulatedToolInstructionsPresent(List<ChatMessage> messages) {
@@ -486,84 +492,119 @@ public class Coder {
             var t = Models.getText(m);
             return t.contains("tool_calls")
                     && t.matches("(?s).*\\d+ available tools:.*")
-                    && t.contains("Response format:");
+                    && t.contains("top-level JSON");
         });
     }
 
-    private static StreamingResult parseJsonToTools(StreamingResult result, ObjectMapper mapper) {
-        String jsonResponse = result.chatResponse.aiMessage().text();
-        logger.debug("Raw JSON response from model: {}", jsonResponse);
+    /**
+     * Builds a JSON schema describing exactly:
+     * {
+     *   "tool_calls": [
+     *     {
+     *       "name": "oneOfTheTools",
+     *       "arguments": { ... arbitrary object ...}
+     *     }
+     *   ]
+     * }
+     * We do not attempt fancy anyOf references here (not all providers support them).
+     */
+    private static JsonSchema buildToolCallsSchema(List<String> toolNames) {
+        // name => enum of tool names
+        var nameSchema = JsonEnumSchema.builder()
+                .enumValues(toolNames)
+                .description("Name of the tool to call; must be one of: " + String.join(", ", toolNames))
+                .build();
+
+        // arguments => free-form object
+        var argumentsSchema = JsonObjectSchema.builder()
+                .description("Tool arguments object (specific structure depends on the tool).")
+                .build();
+
+        // each item => { name, arguments }
+        var itemSchema = JsonObjectSchema.builder()
+                .addProperty("name", nameSchema)
+                .addProperty("arguments", argumentsSchema)
+                .required("name", "arguments")
+                .build();
+
+        // array property "tool_calls"
+        var toolCallsArray = JsonArraySchema.builder()
+                .description("All tool calls to be made in sequence.")
+                .items(itemSchema)
+                .build();
+
+        // top-level object
+        var rootSchema = JsonObjectSchema.builder()
+                .addProperty("tool_calls", toolCallsArray)
+                .required("tool_calls")
+                .description("Top-level object containing a 'tool_calls' array describing calls to be made.")
+                .build();
+
+        return JsonSchema.builder()
+                .name("ToolCalls")
+                .rootElement(rootSchema)
+                .build();
+    }
+
+    /**
+     * Parse the model's JSON response into a ChatResponse that includes ToolExecutionRequests.
+     * Expects the top-level to have a "tool_calls" array (or the root might be that array).
+     */
+    private static StreamingResult parseJsonToToolRequests(StreamingResult result, ObjectMapper mapper) {
+        String rawText = result.chatResponse.aiMessage().text();
+        logger.debug("parseJsonToToolRequests: rawText={}", rawText);
+
         JsonNode root;
         try {
-            root = mapper.readTree(jsonResponse);
+            root = mapper.readTree(rawText);
         } catch (JsonProcessingException e) {
             logger.debug("Invalid JSON", e);
             throw new IllegalArgumentException("Invalid JSON: " + e.getMessage());
         }
 
-        JsonNode toolCalls;
-        // Check for tool_calls array format
-        if (root.has("tool_calls") && root.get("tool_calls").isArray()) {
-            // happy path, this is what we asked for
-            toolCalls = root.get("tool_calls");
-        } else if (root.isArray()) {
-            // gemini 2.5 REALLY likes to give a top-level array instead
-            toolCalls = root;
-        } else {
-            throw new IllegalArgumentException("Response does not contain a 'tool_calls' array");
+        JsonNode toolCallsNode;
+        if (!root.has("tool_calls") || !root.get("tool_calls").isArray()) {
+            throw new IllegalArgumentException("Response missing 'tool_calls' array property");
         }
+        toolCallsNode = root.get("tool_calls");
 
-        // Transform json into list of tool execution requests
-        var toolExecutionRequests = new ArrayList<ToolExecutionRequest>();
-        for (int i = 0; i < toolCalls.size(); i++) {
-            JsonNode toolCall = toolCalls.get(i);
-            if (!toolCall.has("name") || !toolCall.has("arguments")) {
-                throw new IllegalArgumentException("Tool call object is missing 'name' or 'arguments' field");
+        var callsList = new ArrayList<ToolExecutionRequest>();
+        for (int i = 0; i < toolCallsNode.size(); i++) {
+            JsonNode callNode = toolCallsNode.get(i);
+            if (!callNode.has("name") || !callNode.has("arguments")) {
+                throw new IllegalArgumentException("tool_calls[" + i + "] missing 'name' or 'arguments'");
             }
+            String name = callNode.get("name").asText();
+            JsonNode argsNode = callNode.get("arguments");
 
-            String toolName = toolCall.get("name").asText();
-            JsonNode arguments = toolCall.get("arguments");
-
-            String argumentsJson;
-            if (arguments.isObject()) {
-                argumentsJson = arguments.toString();
-            } else {
-                // Handle case where arguments might be a string instead of object
-                try {
-                    JsonNode parsedArgs = mapper.readTree(arguments.asText());
-                    argumentsJson = parsedArgs.toString();
-                } catch (Exception e) {
-                    // If parsing fails, use as-is or log warning
-                    logger.warn("Argument is not valid JSON object for tool '{}', treating as string: {}", toolName, arguments.asText(), e);
-                    argumentsJson = arguments.toString(); // Keep original if parsing fails
-                }
+            if (!argsNode.isObject()) {
+                throw new IllegalArgumentException("tool_calls[" + i + "] provided non-object arguments " + argsNode);
             }
-
-            var toolExecutionRequest = ToolExecutionRequest.builder()
+            String argsStr = argsNode.toString();
+            var req = ToolExecutionRequest.builder()
                     .id(String.valueOf(i))
-                    .name(toolName)
-                    .arguments(argumentsJson)
+                    .name(name)
+                    .arguments(argsStr)
                     .build();
-
-            toolExecutionRequests.add(toolExecutionRequest);
+            callsList.add(req);
         }
 
-        assert !toolExecutionRequests.isEmpty();
-        logger.debug("Generated tool execution requests: {}", toolExecutionRequests);
+        var aiMsgWithTools = new AiMessage("[json]", callsList);
+        var newResponse = ChatResponse.builder().aiMessage(aiMsgWithTools).build();
 
-        // Create a properly formatted AiMessage with tool execution requests
-        var aiMessage = new AiMessage("[json]", toolExecutionRequests);
-        var cr = ChatResponse.builder().aiMessage(aiMessage).build();
-        return new StreamingResult(cr, result.originalResponse, result.outputTokenCount, false, null);
+        return new StreamingResult(newResponse,
+                                   result.originalResponse,
+                                   result.outputTokenCount,
+                                   false,
+                                   null);
     }
 
     private static String getInstructions(List<ToolSpecification> tools) {
-        var mapper = new ObjectMapper();
         String toolsDescription = tools.stream()
                 .map(tool -> {
                     var parametersInfo = tool.parameters().properties().entrySet().stream()
                             .map(entry -> {
-                                var schema = entry.getValue(); // Get the JsonSchemaElement object
+                                var schema = entry.getValue();
                                 String description;
                                 String type;
 
@@ -581,8 +622,7 @@ public class Coder {
                                             case JsonIntegerSchema __ -> "integer";
                                             case JsonNumberSchema __ -> "number";
                                             case JsonBooleanSchema __ -> "boolean";
-                                            default ->
-                                                    throw new IllegalArgumentException("Unsupported array item type: " + itemSchema);
+                                            default -> throw new IllegalArgumentException("Unsupported array item type: " + itemSchema);
                                         };
                                         type = "array of %s".formatted(itemType);
                                     }
@@ -598,51 +638,39 @@ public class Coder {
                                         description = jbSchema.description();
                                         type = "boolean";
                                     }
-                                    default ->
-                                            throw new IllegalArgumentException("Unsupported schema type: " + schema);
+                                    default -> throw new IllegalArgumentException("Unsupported schema type: " + schema);
                                 }
-
-                                // Ensure description is not null for formatting
-                                if (description == null) {
-                                    logger.warn("Parameter '{}' for tool '{}' has a null description.", entry.getKey(), tool.name());
-                                    description = "(No description provided)"; // Provide a default
-                                }
-
-                                // REMOVED: var node = mapper.valueToTree(entry.getValue());
-                                // REMOVED: var descriptionNode = node.get("description");
-                                // REMOVED: assert descriptionNode != null && descriptionNode.isTextual() : descriptionNode;
-                                // REMOVED: var typeNode = node.get("type");
-                                // REMOVED: assert typeNode != null && typeNode.isTextual() : typeNode;
+                                assert description != null;
 
                                 return """
-                        <parameter name="%s" type="%s" required="%s">
-                        %s
-                        </parameter>
-                        """.formatted(
+                                <parameter name="%s" type="%s" required="%s">
+                                %s
+                                </parameter>
+                                """.formatted(
                                         entry.getKey(),
-                                        type, // Use the determined type string
+                                        type,
                                         tool.parameters().required().contains(entry.getKey()),
-                                        description); // Use the directly accessed description
+                                        description
+                                );
                             })
                             .collect(Collectors.joining("\n"));
 
                     return """
-                   <tool name="%s">
-                   %s
-                   %s
-                   </tool>
-                   """.formatted(tool.name(), tool.description(), parametersInfo.isEmpty() ? "(No parameters)" : parametersInfo);
-                })
-                .collect(Collectors.joining("\n"));
-        return """
-        You MUST respond ONLY with a valid JSON object containing a 'tool_calls' array. Your first call should be to `explain`.
-        Include all the tool calls necessary to satisfy the request in a single array!
-        REMEMBER that you are to provide a JSON object containing a 'tool_calls' array, NOT a top-level array.
+                    <tool name="%s">
+                    %s
+                    %s
+                    </tool>
+                            """.formatted(tool.name(),
+                                          tool.description(),
+                                          parametersInfo.isEmpty() ? "(No parameters)" : parametersInfo);
+                }).collect(Collectors.joining("\n"));
 
+        // if you change this you probably also need to change emulatedToolInstructionsPresent
+        return """
         %d available tools:
         %s
 
-        Response format:
+        ONLY return a top-level JSON object with this structure:
         {
           "tool_calls": [
             {
@@ -654,23 +682,26 @@ public class Coder {
             }
           ]
         }
+
+        Include all the tool calls necessary to satisfy the request in a single array!
         """.formatted(tools.size(), toolsDescription);
     }
 
+    /**
+     * Writes messages and (optionally) tool specs to the .brokk/llm.log for debugging.
+     */
     private void writeRequestToHistory(List<ChatMessage> messages, List<ToolSpecification> tools) {
-        String requestText = messages.stream()
-                .map(m -> "%s: %s\n".formatted(m.type(), Models.getText(m)))
-                .reduce((a, b) -> a + "\n" + b)
-                .orElse("");
+        String text = messages.stream()
+                .map(m -> m.type() + ": " + Models.getText(m))
+                .collect(Collectors.joining("\n"));
 
         if (tools != null && !tools.isEmpty()) {
-            requestText += "\nTools:\n" + tools.stream()
-                    .map(t -> "- %s: %s".formatted(t.name(), t.description()))
-                    .reduce((a, b) -> a + "\n" + b)
-                    .orElse("");
+            text += "\n\nTools:\n" + tools.stream()
+                    .map(t -> " - " + t.name() + ": " + t.description())
+                    .collect(Collectors.joining("\n"));
         }
 
-        writeToHistory("Request", requestText);
+        writeToHistory("Request", text);
     }
 
     private void writeToHistory(String header, String text) {
@@ -687,12 +718,10 @@ public class Coder {
     /**
      * Combines tool request validations and their execution results into a summary string.
      * Each line is in the format: "description: result text"
-     *
-     * @param validatedRequests the list of validated tool requests
-     * @param resultMessages the corresponding list of tool execution result messages
-     * @return a combined summary string
      */
-    public String emulateToolResults(List<LLMTools.ValidatedToolRequest> validatedRequests, List<dev.langchain4j.data.message.ToolExecutionResultMessage> resultMessages) {
+    public String emulateToolResults(
+            List<LLMTools.ValidatedToolRequest> validatedRequests,
+            List<dev.langchain4j.data.message.ToolExecutionResultMessage> resultMessages) {
         var sb = new StringBuilder();
         for (int i = 0; i < validatedRequests.size() && i < resultMessages.size(); i++) {
             var vr = validatedRequests.get(i);
@@ -706,11 +735,17 @@ public class Coder {
     }
 
     /**
-     * Represents the outcome of a streaming request.
+     * The result of a streaming call. Usually you only need the final ChatResponse
+     * unless cancelled or error is non-null.
      */
-    public record StreamingResult(ChatResponse chatResponse, ChatResponse originalResponse, int outputTokenCount, boolean cancelled, Throwable error) {
+    public record StreamingResult(
+            ChatResponse chatResponse,
+            ChatResponse originalResponse,
+            int outputTokenCount,
+            boolean cancelled,
+            Throwable error) {
         public StreamingResult(ChatResponse chatResponse, boolean cancelled, Throwable error) {
-            this(chatResponse, -1, cancelled, error);
+            this(chatResponse, chatResponse, -1, cancelled, error);
         }
 
         public StreamingResult(ChatResponse chatResponse, int outputTokenCount, boolean cancelled, Throwable error) {
@@ -718,6 +753,7 @@ public class Coder {
         }
 
         public StreamingResult {
+            // Must have either a chatResponse or an error/cancel
             assert cancelled || error != null || chatResponse != null;
             assert (originalResponse == null) == (chatResponse == null);
         }
